# mpi-molecular-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  results_checker.py  sequential.py  test.sh  test_gen.py  utils.cpp  utils.h
tests/: particles_in.txt  particles_out.txt  particles_out_5_steps.txt  test_100.txt  test_1000.txt  test_100_100_0.5_out  test_100_50_0.5_out  test_100_5_0.5_out  test_500.txt
